Incorrect stack size on Mac OS

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • None
    • Affects Version/s: 2.3.0
    • Component/s: Internal Code
    • None
    • Environment:
      Mac OS X
    • Fully Compatible
    • OS X
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      For the debug build of the test program (at least), it looks like we are getting the default thread stack size of 512 KB instead of the 1 MB that we get on all other platforms.

      On Linux and Windows, I can set the StackChecker limit to 800 KB to see how much stack space is used in a test, then set it back down to a value calculated to pass the StackChecker limit. When I try this on the Mac, I get

      Bus error: 10

      Same error with 510 KB. Dropping the limit to 490 KB gets me past the bus error.

            Assignee:
            DO NOT USE - Backlog - Platform Team (Inactive)
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: