SERVER-7735 Change ifdefs to use pthreads directly on most platforms

Change the ifdefs from using pthreads directly only on Linux to using
pthreads directly on all platforms except Windows.  The alternative
threading mechanism is boost::thread; this is now used only for Windows.